linked play, pause, and reset button with treatment

--- a/COMP_3004_Team_24/mainwindow.ui
+++ b/COMP_3004_Team_24/mainwindow.ui
@@ -245,7 +245,7 @@ border-image: url(&quot;:/images/pause-solid.svg&quot;);
       <string/>
      </property>
     </widget>
-    <widget class="QPushButton" name="stop">
+    <widget class="QPushButton" name="reset">
      <property name="geometry">
       <rect>
        <x>380</x>
