--- a/COMP_3004_Team_24/mainwindow.ui
+++ b/COMP_3004_Team_24/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>799</width>
-    <height>486</height>
+    <height>591</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -293,6 +293,32 @@ border-image: url(&quot;:/images/circle-check-solid.svg&quot;);</string>
       <string/>
      </property>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="contact_on">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>460</y>
+      <width>100</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Contact On</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="contact_off">
+    <property name="geometry">
+     <rect>
+      <x>430</x>
+      <y>460</y>
+      <width>100</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Contact Off</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
