--- a/COMP_3004_Team_24/mainwindow.ui
+++ b/COMP_3004_Team_24/mainwindow.ui
@@ -1,3 +1,4 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>MainWindow</class>
@@ -306,6 +307,32 @@ border-image: url(&quot;:/images/circle-check-solid.svg&quot;);</string>
       <string/>
      </property>
     </widget>
+    <widget class="QProgressBar" name="batteryDisplay">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>40</y>
+       <width>81</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="value">
+      <number>24</number>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lowBatteryMsg">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>50</y>
+       <width>441</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>lowBatteryMsg</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QPushButton" name="contact_on">
     <property name="geometry">
@@ -331,6 +358,19 @@ border-image: url(&quot;:/images/circle-check-solid.svg&quot;);</string>
     </property>
     <property name="text">
      <string>Contact Off</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="powerSourceButton">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>520</y>
+      <width>101</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Power Source</string>
     </property>
    </widget>
   </widget>
