--- a/COMP_3004_Team_24/mainwindow.ui
+++ b/COMP_3004_Team_24/mainwindow.ui
@@ -382,7 +382,7 @@ border-image: url(&quot;:/images/circle-check-solid.svg&quot;);</string>
      </rect>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit">
+   <widget class="QPlainTextEdit" name="computerDisaply">
     <property name="geometry">
      <rect>
       <x>990</x>
@@ -391,8 +391,11 @@ border-image: url(&quot;:/images/circle-check-solid.svg&quot;);</string>
       <height>341</height>
      </rect>
     </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="connectPCButton">
     <property name="geometry">
      <rect>
       <x>830</x>
@@ -405,7 +408,7 @@ border-image: url(&quot;:/images/circle-check-solid.svg&quot;);</string>
      <string>Connect</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="PClabel">
     <property name="geometry">
      <rect>
       <x>1120</x>
