--- a/COMP_3004_Team_24/mainwindow.ui
+++ b/COMP_3004_Team_24/mainwindow.ui
@@ -382,10 +382,10 @@ border-image: url(&quot;:/images/circle-check-solid.svg&quot;);</string>
      </rect>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="computerDisaply">
+   <widget class="QPlainTextEdit" name="computerDisplay">
     <property name="geometry">
      <rect>
-      <x>990</x>
+      <x>830</x>
       <y>70</y>
       <width>281</width>
       <height>341</height>
@@ -395,23 +395,10 @@ border-image: url(&quot;:/images/circle-check-solid.svg&quot;);</string>
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="connectPCButton">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>210</y>
-      <width>83</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Connect</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="PClabel">
     <property name="geometry">
      <rect>
-      <x>1120</x>
+      <x>960</x>
       <y>40</y>
       <width>62</width>
       <height>17</height>
