Adding PC Output
adding the frequency calculations and data to the pc display at the end of a session

--- a/COMP_3004_Team_24/mainwindow.ui
+++ b/COMP_3004_Team_24/mainwindow.ui
@@ -382,7 +382,7 @@ border-image: url(&quot;:/images/circle-check-solid.svg&quot;);</string>
      </rect>
     </property>
    </widget>
-   <widget class="QPlainTextEdit" name="computerDisaply">
+   <widget class="QPlainTextEdit" name="computerDisplay">
     <property name="geometry">
      <rect>
       <x>990</x>
